--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">Share custom bike routes while enjoying fitness, leisure, and commuting routes from your community</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">DOWNLOAD OUR BETA!</a>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">PREVIEW OUR BETA!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -66,10 +66,17 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="bikemaphome.png" class="img-fluid" alt="">
+                    <video id='bikemapvideo' width= 'max' height='504' autoplay loop>
+                      <source src=bikemap-preview.mp4 type="video/mp4">
+                    </video>
                   </div>
-                  <div class="button">
-                    <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                  <div class="button" onclick="resetVideo()">
+                    <script>
+                      var resetVideo = function () {
+                        var video = document.getElementById("bikemapvideo");
+                        video.currentTime = 0;
+                      }                      
+                    </script>
                   </div>
                 </div>
               </div>
@@ -83,10 +90,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Beta now available on Android!</h2>
+            <h2 class="section-heading">Beta now available through the Expo App</h2>
             <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://play.google.com/store/apps/details?id=host.exp.exponent&hl=en" target="_blank"><img src="img/google-play-badge.svg" alt=""></a>
+              <a class="badge-link" href="https://itunes.apple.com/us/app/expo-client/id982107779?mt=8" target="_blank"xde><img src="img/app-store-badge.svg" alt=""></a>
             </div>
+              <br>
+              <h3 class='section-heading'>Scan the code below to load Bike Map!</h3>
+              <img src="bikemapQR.png" alt="QR Code" height="150" width="150">
           </div>
         </div>
       </div>
@@ -94,26 +105,17 @@
 
     
 
-    <section class="contact bg-third">
+    <section class="contact bg-third" id='contact'>
       <h2>Contact Us!</h2>   
         <a href="mailto:gagnierzachary@gmail.com">Zach Gagnier</a> |
         <a href="mailto:contact@patrickbrownjr.me">Patrick Brown Jr</a> |
-        <a href="mailto:emailrobaird@gmail.com">Robert Aird</a>    
+        <a href="mailto:robkaird@gmail.com">Robert Aird</a>
+        <br>
+        <br>
+        <div>
+          <a href="https://github.com/honeybadgerhackers/bikeMap-Client">View The Code</a>
+        </div>    
     </section>
-
-    <!-- <section class="contact bg-primary" id="contact">
-      <h2>Contact Us!</h2>
-    </section> -->
-
-    <footer>
-      <div class="container">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="#">Privacy</a>
-          </li>          
-        </ul>
-      </div>
-    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
