--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                     <video id='bikemapvideo' width= 'max' height='504' autoplay loop>
-                      <source src=bikemap-preview.mp4 type="video/mp4">
+                      <source src=bike-map-preview2.mp4 type="video/mp4">
                     </video>
                   </div>
                   <div class="button" onclick="resetVideo()">
